--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     .flower {
       width: 100px;
       height: 100px;
-      background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Iconic_flower.svg/1024px-Iconic_flower.svg.png') no-repeat center/contain;
+      background: url('https://www.svgrepo.com/show/131805/big-flower.svg') no-repeat center/contain;
       margin-top: 2em;
       cursor: pointer;
       transition: transform 1s ease;
